<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.scaninfotech.android.msmartlite.AddTaskActivity" >

    <TextView
        android:id="@+id/tasks_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_task" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tasks_title"
        android:hint="@string/assetBarcode" />

    <requestFocus />

    <EditText
        android:id="@+id/visitor_desgn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/task_name"
        android:ems="10"
        android:hint="@string/assetLocation"
        android:inputType="textPersonName" >
    </EditText>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add_button"
        android:layout_toRightOf="@+id/add_button"
        android:text="@string/cancel_task"
        android:background="#ff3ca45e"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/add_task"
        android:background="#ff3ca45e"
        android:textColor="#ffffffff" />

    <NumberPicker
        android:id="@+id/visitor_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/turnover_spinner"
        android:clickable="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/visitor_org"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/visitor_desgn"
        android:ems="10"
        android:hint="Organisation"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/turnover_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusableInTouchMode="false"
        android:layout_alignTop="@+id/visitor_org"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/checkbox_3"
        android:layout_toEndOf="@+id/checkbox_3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assetCondition"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/visitor_org"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Spinner1"
        android:layout_above="@+id/checkbox_4"
        android:layout_alignTop="@+id/visitor_years"></ListView>


    <CheckBox
        android:id="@+id/checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/string_chkBox1"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkbox_1"
        android:onClick="onCheckboxClicked"
        android:text="@string/string_chkBox2"
        android:visibility="invisible" />

     <CheckBox
        android:id="@+id/checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkbox_2"
        android:onClick="onCheckboxClicked"
        android:text="@string/string_chkBox3"
         android:visibility="invisible" />
      <CheckBox
        android:id="@+id/checkbox_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkbox_3"
        android:onClick="onCheckboxClicked"
        android:text="@string/string_chkBox4"
          android:visibility="invisible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_prompt"
        android:id="@+id/scan_button"
        android:onClick="launchSimpleFragmentActivity"
        android:layout_below="@+id/checkbox_3"
        android:layout_marginTop="16dp"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/checkbox_4"
        android:layout_toLeftOf="@+id/visitor_years"
        android:layout_toStartOf="@+id/visitor_years"
        android:background="#ff3ca45e"
        android:textColor="#ffffffff" />

</RelativeLayout>